--- a/index.Rmd
+++ b/index.Rmd
@@ -35,7 +35,7 @@ opts_chunk$set(
 
 ```
 
-```{r, echo = FALSE}
+```{r}
 source("pm566-midterm-final-copy.R")
 
 #Viz 1: Months with the Highest Crime in the Top 5 Areas
@@ -45,50 +45,19 @@ month_crime <- month_crime %>% layout(title = "Months with the Highest Crime in 
 month_crime_plotly <- ggplotly(month_crime)
 month_crime_plotly 
 
+#Viz 2: Most Common Crimes in Top Areas
+top_crime <- ncrimes %>% 
+  plot_ly(x = ~Crime, y = ~n,
+          type = 'scatter',
+          mode = 'markers',
+          color = ~Area,
+          sizes = c(5, 70),
+          marker = list(sizemode='diameter', opacity=0.5))
+top_crime <- top_crime %>% layout(title = "Most Common Crime in Top Areas")
+top_crime_plotly <- ggplotly(top_crime)
+top_crime_plotly
 
-
-#Viz 2: Victim Age and Sex
-#Interactive Histogram
-vict_demo <-plot_ly(victim_demographics, x = ~victim_age_f, color = ~`Victim Sex`) %>%
-  add_histogram()
-#vict_demo <- vict_demo %>% layout(barmode = "overlay")
-vict_demo <- vict_demo %>% layout(title = "Histogram of Victim's Age and Gender",
-                                  yaxis = list(
-                                    title = "Count"
-                                  ),
-                                  xaxis = list(
-                                    title = "Age"
-                                  ))
-vict_demo_plotly <- ggplotly(vict_demo)
-vict_demo_plotly
-```
-
-```{r}
-### LEAFLET MAP PLOT OF CENTRAL 
-central_top_crimes <-
-  crimedat %>%
-  select(`Record No`, `Crime Code`, Area, Crime, `Year`, `Lat`, `Lon`)
-
-#Subset Area = Central and Year = 2021
-central_top_crimes <- subset(central_top_crimes, 
-                             `Area` %in% c("Central") &
-                               `Year` %in% c("2021"))
-
-#View top 5 crimes in Central
-central_top_crimes %>% 
-  group_by(Area, `Crime Code`, Crime) %>%
-  summarise(Count = n()) %>%
-  arrange(desc(Count)) %>%
-  head(,10) %>%
-  knitr::kable()
-
-#Now subset Crime Code to top 5 in that area
-central_top_crimes <- subset(central_top_crimes, 
-                             `Crime Code` %in% c("330", "624", "740", "230", "440"))
-
-#Map color palette
-central.pal <- colorFactor(c('red', 'yellow', 'blue', 'green', 'purple'), domain = central_top_crimes$`Crime`)
-
+#Viz 3: Area with the Highest Crime Map
 central_map <- 
   leaflet(central_top_crimes) %>%  
   addProviderTiles('CartoDB.Positron') %>% 
@@ -107,24 +76,43 @@ central_map <-
             title = 'Central Crime Map', 
             opacity = 1)
 central_map
-```
 
+#Viz 4: Victim Age and Sex
+vict_demo <-plot_ly(victim_demographics, x = ~victim_age_f, color = ~`Victim Sex`) %>%
+  add_histogram()
+#vict_demo <- vict_demo %>% layout(barmode = "overlay")
+vict_demo <- vict_demo %>% layout(title = "Histogram of Victim's Age and Gender",
+                                  yaxis = list(
+                                    title = "Count"
+                                  ),
+                                  xaxis = list(
+                                    title = "Age"
+                                  ))
+vict_demo_plotly <- ggplotly(vict_demo)
+vict_demo_plotly
+
+```
 
 ## Showcasing plots {.tabset}
 
 ### Tab 1
 
 ```{r echo=FALSE}
-central_map
+month_crime_plotly 
 ```  
 
 ### Tab 2
 
 ```{r echo=FALSE}
-month_crime_plotly  
+top_crime_plotly 
 ```
 
 ### Tab 3
+```{r echo=FALSE}
+central_map
+```
+
+### Tab 4
 ```{r echo=FALSE}
 vict_demo_plotly
 ```
