update: change source to new R script

--- a/index.Rmd
+++ b/index.Rmd
@@ -36,7 +36,7 @@ opts_chunk$set(
 ```
 
 ```{r}
-source("pm566-midterm-final-copy.R")
+source("crime_presentation_eda.R")
 
 #Viz 1: Months with the Highest Crime in the Top 5 Areas
 month_crime = plot_ly(ncrimesdate, x = ~Month, y = ~n, color = ~Area, type = "bar")
